# cmsdl

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  build.rs
.cargo/: config.toml
.github/workflows/: release.yml
chat_records/: README.md  chat-01.md  chat-02.md  chat-03.md  chat-04.md  chat-05.md  chat-06.md  chat-07.md  chat-08.md  chat-09.md  chat-10.md  chat-11.md  chat-12.md  chat-13.md  chat-14.md  chat-15.md  chat-16.md  chat-17.md  gen_text.py
nsis/: LRConfig.xml  add_firewall_rules.ps1  get_msvc.ps1  installer.nsi  installer_tms.nsi
src/: bittorrent.rs  cli.rs  cms.rs  downloader.rs  filter.rs  gui.rs  gui_downloader.rs  gui_patch.rs  gui_test.rs  is_hdd.rs  keep_awake.rs  locale.rs  main.rs  manual.rs  metered.rs  miniwzlib.rs  net.rs  patch.rs  patch_builder.rs  patch_creator.rs  progress.rs  resume.rs  taskprogress.rs  tms.rs
src/locales/: en.ftl  zh-CN.ftl  zh-TW.ftl
