[package]
name = "cmsdl"
version = "0.1.3"
edition = "2021"
description = "A downloader designed for Greater China region mushroom game"
license = "MIT"
repository = "https://github.com/HikariCalyx/cmsdl"

[[bin]]
name = "cmsdl"
path = "src/main.rs"

[build-dependencies]
winresource = "0.1"

[features]
default = ["bittorrent"]
# BitTorrent support pulls in a full BT engine (librqbit) and the tokio async
# runtime. Disable it (`--no-default-features`) for a much leaner build.
bittorrent = ["dep:librqbit", "dep:tokio"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
ureq = "2"
roxmltree = "0.20"
rsa = { version = "0.9", features = ["pem"] }
hex = "0.4"
base64 = "0.22"
chrono = "0.4"
md-5 = "0.10"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.17"
librqbit = { version = "8.1", optional = true, default-features = false, features = ["default-tls"] }
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "time", "macros"] }
