[package]
name = "cmsdl"
version = "0.2.0-prerelease1"
edition = "2021"
description = "A downloader designed for Greater China region mushroom game"
license = "MIT"
repository = "https://github.com/HikariCalyx/cmsdl"

[[bin]]
name = "cmsdl"
path = "src/main.rs"

[build-dependencies]
winresource = "0.1"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
ureq = { version = "2", features = ["socks-proxy"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
roxmltree = "0.20"
rsa = { version = "0.9", features = ["pem"] }
hex = "0.4"
base64 = "0.22"
chrono = "0.4"
md-5 = "0.10"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.17"
regex = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
hdiffpatch-rs = { git = "https://github.com/TwintailTeam/hdiffpatch-rs.git", rev = "121fe9d7ad7f75014739b05d510f40350c75d293" }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
